src/app/(frontend)/globals.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
@import 'tailwindcss';
@import 'tw-animate-css';

@config "../../../tailwind.config.mjs";

@custom-variant dark (&:is(.dark *));

:root {
  --background: #f0f8ff;
  --foreground: #141b24;
  --card: #ffffff;
  --card-foreground: #141b24;
  --popover: #ffffff;
  --popover-foreground: #141b24;
  --primary: #e03e9b;
  --primary-foreground: #f0f8ff;
  --secondary: #40c2f1;
  --secondary-foreground: #f0f8ff;
  --muted: #e6e6e6;
  --muted-foreground: #666666;
  --accent: #f0f0f0;
  --accent-foreground: #141b24;
  --destructive: #ef4444;
  --destructive-foreground: #f2f2f2;
  --border: #d4d4d4;
  --input: #e6e6e6;
  --ring: #40c2f1;
  --chart-1: #804ff2;
  --chart-2: #40c2f1;
  --chart-3: #4788f7;
  --chart-4: #c438c8;
  --chart-5: #e03e9b;
  --sidebar: #ffffff;
  --sidebar-foreground: #141b24;
  --sidebar-primary: #40c2f1;
  --sidebar-primary-foreground: #f0f8ff;
  --sidebar-accent: #f0f0f0;
  --sidebar-accent-foreground: #141b24;
  --sidebar-border: #d4d4d4;
  --sidebar-ring: #40c2f1;
  --font-sans: DM Sans, sans-serif;
  --font-serif: Lora, serif;
  --font-mono: IBM Plex Mono, monospace;
  /* --font-sans: Catamaran;
  --font-serif: Montserrat;
  --font-mono: 'Fira Code', monospace; */
  --radius: 0.5rem;
  --shadow-x: 0rem;
  --shadow-y: 0.25rem;
  --shadow-blur: 0.5rem;
  --shadow-spread: 0rem;
  --shadow-opacity: 0.05;
  --shadow-color: #000000;
  --shadow-2xs: 0rem 0.25rem 0.5rem 0rem hsl(0 0% 0% / 0.03);
  --shadow-xs: 0rem 0.25rem 0.5rem 0rem hsl(0 0% 0% / 0.03);
  --shadow-sm: 0rem 0.25rem 0.5rem 0rem hsl(0 0% 0% / 0.05), 0rem 1px 2px -1px hsl(0 0% 0% / 0.05);
  --shadow: 0rem 0.25rem 0.5rem 0rem hsl(0 0% 0% / 0.05), 0rem 1px 2px -1px hsl(0 0% 0% / 0.05);
  --shadow-md: 0rem 0.25rem 0.5rem 0rem hsl(0 0% 0% / 0.05), 0rem 2px 4px -1px hsl(0 0% 0% / 0.05);
  --shadow-lg: 0rem 0.25rem 0.5rem 0rem hsl(0 0% 0% / 0.05), 0rem 4px 6px -1px hsl(0 0% 0% / 0.05);
  --shadow-xl: 0rem 0.25rem 0.5rem 0rem hsl(0 0% 0% / 0.05), 0rem 8px 10px -1px hsl(0 0% 0% / 0.05);
  --shadow-2xl: 0rem 0.25rem 0.5rem 0rem hsl(0 0% 0% / 0.13);
  --tracking-normal: 0em;
  --spacing: 0.25rem;
}

[data-theme='dark'] {
  --background: #141b24;
  --foreground: #f2f2f2;
  --card: #1a222c;
  --card-foreground: #f2f2f2;
  --popover: #1a222c;
  --popover-foreground: #f2f2f2;
  --primary: #e03e9b;
  --primary-foreground: #f2f2f2;
  --secondary: #40c2f1;
  --secondary-foreground: #f2f2f2;
  --muted: #2a3644;
  --muted-foreground: #a0a0a0;
  --accent: #354251;
  --accent-foreground: #f2f2f2;
  --destructive: #dc2626;
  --destructive-foreground: #f2f2f2;
  --border: #3d4957;
  --input: #2a3644;
  --ring: #40c2f1;
  --chart-1: #804ff2;
  --chart-2: #40c2f1;
  --chart-3: #4788f7;
  --chart-4: #c438c8;
  --chart-5: #e03e9b;
  --sidebar: #141b24;
  --sidebar-foreground: #f2f2f2;
  --sidebar-primary: #40c2f1;
  --sidebar-primary-foreground: #f2f2f2;
  --sidebar-accent: #354251;
  --sidebar-accent-foreground: #f2f2f2;
  --sidebar-border: #3d4957;
  --sidebar-ring: #40c2f1;
  --font-sans: Catamaran;
  --font-serif: Montserrat;
  --font-mono: 'Fira Code', monospace;
  --radius: 0.5rem;
  --shadow-x: 0rem;
  --shadow-y: 0.5rem;
  --shadow-blur: 0.75rem;
  --shadow-spread: 0rem;
  --shadow-opacity: 0.2;
  --shadow-color: #000000;
  --shadow-2xs: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.1);
  --shadow-xs: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.1);
  --shadow-sm: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.2), 0rem 1px 2px -1px hsl(0 0% 0% / 0.2);
  --shadow: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.2), 0rem 1px 2px -1px hsl(0 0% 0% / 0.2);
  --shadow-md: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.2), 0rem 2px 4px -1px hsl(0 0% 0% / 0.2);
  --shadow-lg: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.2), 0rem 4px 6px -1px hsl(0 0% 0% / 0.2);
  --shadow-xl: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.2), 0rem 8px 10px -1px hsl(0 0% 0% / 0.2);
  --shadow-2xl: 0rem 0.5rem 0.75rem 0rem hsl(0 0% 0% / 0.5);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground min-h-[100vh] flex flex-col;
  }
}

html {
  opacity: 0;
  font-family: 'Montserrat', sans-serif;
}

html[data-theme='dark'],
html[data-theme='light'] {
  opacity: initial;
}

